--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js"></script> 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<title>GLAVNA</title> 
 
-  </head>
-  <body>
-    <script src="sketch.js"></script>
-  </body>
+<style>
+body{
+	background-color: #a8a8a8; 
+	margin:0px;
+}
+ 
+ 
+	a{text-decoration: none;
+		transition:0.1s; 
+		margin-left:23px;  
+		font-family: 'Press Start 2P', cursive;
+		font-size:11px; 
+		color:#FFFFFF; opacity:60%;
+	}
+
+	a:hover{
+		transition:.2s;
+		opacity:100%;
+		font-size: 11.3px; 
+	}
+
+
+ul{
+margin-top:20px;
+margin-left:-50px;
+
+
+}
+  
+
+
+</style>
+</head>
+<body>  
+	 
+	 <nav>
+		<ul> 
+			<li><a href="index1.html">INTERAKTIVNA ANIMACIJA</a></li> </br>
+			<li><a href="index2.html">CRTANJE (nedovršeno)</a></li></br>
+			 
+			
+		</ul>
+	</nav>
+	
+	
+	
+	
+	
+	
+</body>
 </html>
