--- a/index1.html
+++ b/index1.html
@@ -180,11 +180,11 @@
 		<h1></h1>
         <p>KOLIČINA</p>
         <p>BRZINA</p> 
+        <p>ISPUNA</p> 
         <p>BOJA</p> 
         <p>TONOVI</p> 
         <p>NOISE</p> 
-        <p>ISPUNA</p> 
-        <p>OBRUB</p> 
+        <p>ZOOM</p> 
         <p>IZDUŽENOST</p>   
 		<div class="gumb1">POZADINA</div> 
 		<div class="gumb2">FOTKAJ</div> 
