--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@ body{
  
  
 	a{text-decoration: none;
-		transition:0.1s; 
+		transition:0.2s; 
 		margin-left:23px;  
 		font-family: 'Press Start 2P', cursive;
-		font-size:11px; 
-		color:#FFFFFF; opacity:60%;
+		font-size:12px; 
+		color:#DDD;  
 	}
 
 	a:hover{
-		transition:.2s;
-		opacity:100%;
-		font-size: 11.3px; 
+		transition:.5s; 
+		color:#FFFFFF; 
 	}
 
 
@@ -44,7 +43,8 @@ margin-left:-50px;
 	 <nav>
 		<ul> 
 			<li><a href="index1.html">INTERAKTIVNA ANIMACIJA</a></li> </br>
-			<li><a href="index2.html">CRTANJE (nedovršeno)</a></li></br>
+			<li><a href="index2.html">CRTANJE_1 (kvadrati)</a></li></br>
+			<li><a href="index3.html">CRTANJE_2 (kružići)</a></li></br>
 			 
 			
 		</ul>
