--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@ margin-left:-50px;
 	 
 	 <nav>
 		<ul> 
-			<li><a href="index1.html">INTERAKTIVNA ANIMACIJA</a></li> </br>
-			<li><a href="index2.html">CRTANJE_1 (kvadrati)</a></li></br>
-			<li><a href="index3.html">CRTANJE_2 (kružići)</a></li></br>
+			<li><a href="index2.html">CRTANJE</a></li> </br>
+			<li><a href="index1.html">INTERAKTIVNA ANIMACIJA</a></li></br> 
 			 
 			
 		</ul>
