--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ margin-left:-50px;
 	 
 	 <nav>
 		<ul> 
-			<li><a href="index2.html">CRTANJE</a></li> </br>
-			<li><a href="index1.html">INTERAKTIVNA ANIMACIJA</a></li></br> 
+			<li><a href="index2.html">1</a></li> </br>
+			<li><a href="index1.html">2</a></li></br> 
 			 
 			
 		</ul>
