--- a/grafike/index.html
+++ b/grafike/index.html
@@ -14,7 +14,7 @@
 
         <div class="navbar"><h1 class="ime" id="ime1">JOSIP AMADEUS</h1><h1 class="ime" id="ime2">ČERIĆ</h1></div>
 
-        <div class="crveno"><a href="index.html" class="naslov">ARTWORK</a></div>
+        <div class="crveno"><a href="#" class="naslov">ARTWORK</a></div>
            
       
 <div class="gif1"><a href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ" target="_blank"><img src="gifovi/pozdrav.gif"></a></div>   
