--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <section id="mainA">
+    <section id="mainA" class="translacijaNaslova">
         <h1 class="naslov">Josip</h1> 
         <h1 class="naslov naslov2">Amadeus</h1> 
 
@@ -24,8 +24,8 @@
     <section id="mainB" class="translacija">
         <div class="linkovi">
         <a href="./grafike" target="_blank" id="a1">GRAFIKE</a>
-        <a href="https://josip-amadeus.github.io" target="_blank" id="a2">RESPONZIVNI CV I PORTFOLIO</a>
-        <a href="https://amadeusjosip.github.io/p5js" target="_blank" id="a3">P5JS</a>
+        <a href="https://josip-amadeus.github.io" target="_blank" id="a2">responsive CV and PORTFOLIO</a>
+        <a href="https://amadeusjosip.github.io/p5js" target="_blank" id="a3">P5JS work</a>
         </div>
         <div class="doljaTraka">
         <p class="dolje" id="z1">jceric@grf.hr</p>
