--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="linkovi">
 			<a href="./grafike" class="l1">§Grafike</a>
 			<br>
-			<a href="https://amadeusjosip.github.io/grafike" class="l2">§Blender's renders</a>
+			<a href="https://amadeusjosip.github.io/blender" class="l2">§Blender's renders</a>
 			<br>
 			<a href="https://amadeusjosip.github.io/grafike" class="l3">§Motion</a>
 		</div>     
