--- a/blender/index.html
+++ b/blender/index.html
@@ -18,7 +18,7 @@
 
     <section class="navbar">
         <div id="navbar-1" class="navbar-tekst"><h3>099/5416-404</h3></div>
-        <div id="navbar-2" class="navbar-tekst"><a href="https://amadeusjosip.github.io">Home page</a></div>
+        <div id="navbar-2" class="navbar-tekst"><a href="..">Home page</a></div>
         <div id="navbar-3" class="navbar-tekst"><h3>jceric@grf.hr</h3></div>
     </section>
 
