--- a/blender/index.html
+++ b/blender/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLENDERS</title>
+    <link rel="shortcut icon" type="image/png" href="ikona/favicon.png"> 
     <link rel="stylesheet" href="style.css"> 
     
 </head>
@@ -20,31 +21,44 @@
 
     <section class="navbar">
         <div id="navbar-1" class="navbar-tekst"><h3>jceric@grf.hr</h3></div>
-        <div id="navbar-2" class="navbar-tekst"><a href="https://amadeusjosip.github.io">Go Back</a></div>
+        <div id="navbar-2" class="navbar-tekst"><a href="https://amadeusjosip.github.io" id="goback">Go Back</a></div>
         <div id="navbar-3" class="navbar-tekst"><h3 id="tel-broj">099/5416-404</h3></div>
     </section>
 
 
     <section class="galerija">
         <div class="fleks se1">
+            <div class="div-malaSlika">
             <img src="slike/a.jpg" id="s1" class="malaSlika"> 
+            </div>
             <p class = "hesh">1</p>
         </div>
 
         <div class="fleks se2">
-            <img src="slike/b.jpg" id="s2" class="malaSlika"> 
+            <div class="div-malaSlika">
+                <img src="slike/b.jpg" id="s2" class="malaSlika">  
+                </div>
             <p class = "hesh">2</p>
         </div>
+
         <div class="fleks se3">
-            <img src="slike/c.jpg" id="s3" class="malaSlika"> 
+            <div class="div-malaSlika">
+                <img src="slike/c.jpg" id="s3" class="malaSlika"> 
+                </div>
             <p class = "hesh">3</p>
         </div>
+
         <div class="fleks se4">
-            <img src="slike/d.jpg" id="s4" class="malaSlika"> 
+            <div class="div-malaSlika">
+                <img src="slike/d.jpg" id="s4" class="malaSlika"> 
+                </div>
             <p class = "hesh">4</p>
         </div>
+
         <div class="fleks se5">
-            <img src="slike/e.jpg" id="s5" class="malaSlika"> 
+            <div class="div-malaSlika">
+                <img src="slike/e.jpg" id="s5" class="malaSlika"> 
+                </div>
             <p class = "hesh">5</p>
         </div>
     </section>
