--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      
 </head>
 <body>  
-	 
+	 <section class="oky">
 	<main></main>
 	  
 		<p class="ime1">Amadeus Josip</p><p class="ime2">•Čerić•</p>  
@@ -19,7 +19,7 @@
 		<div class="linkovi">
 			<a href="./grafike" class="l1">§Grafike</a>
 			<br>
-			<a href="https://amadeusjosip.github.io/blender" class="l2">§Blender's renders</a>
+			<a href="https://amadeusjosip.github.io/grafike" class="l2">§Interrraktiv</a>
 			<br>
 			<a href="https://amadeusjosip.github.io/grafike" class="l3">§Motion</a>
 		</div>     
@@ -36,7 +36,11 @@
 			<h3 class="midl">JCERIC@GRF.HR</h3> 
 			<h3 class="midl">099/5416-404</h3>
 		</div>
-	
+	</section>
+
+		<section class="sekcija">
+			<h2 class="ha">works only on desktop</h2>
+		</section>
 	
 </body>
 </html>
