--- a/demo-4/index.html
+++ b/demo-4/index.html
@@ -18,9 +18,9 @@
       <p class="pe">Consectetur adipisicing elit. Reiciendis, qui? Distinctio numquam nisi accusamus, minima quos facere.</p>
       <p class="pe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quia dolore. Optio, excepturi tempora itaque doloribus ut est nemo asperiores similique illum? Officia, magni error! Dicta aut saepe autem recusandae assumenda! At saepe id neque eaque quia ex aliquid autem! Repellat quisquam tempora fuga et ea, perferendis iste quaerat voluptates!</p>
     </div>
-    <div class="gumb">
+    <div class="gumb" id="extraGumb">
         <a>GUMB</a>
-        <img class="imag" src="slike/1.jpg">
+        <img class="imag" src="slike/1.jpg" id="extraSlika">
     </div>
     <div class="futer">
         <h3>trg bana Josip Jelačića 47/a</h3>
