--- a/demo-2/index.html
+++ b/demo-2/index.html
@@ -14,9 +14,9 @@
 
   <section class="heder">
     <h2 class="isto"></h2>
-  <a href="https://amadeusjosip.github.io/" target="_blank">HOME PAGE</a>
+  <a href=".." target="_blank">HOME PAGE</a>
   <h2 class="isto"></h2>
-  <a href="https://amadeusjosip.github.io/demo-1/" target="_blank">GO TO DEMO-1</a>
+  <a href="../demo-5/" target="_blank">GO TO DEMO-5</a>
   <h2 class="isto"></h2>
   </section>
 
