--- a/demo-5/index.html
+++ b/demo-5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head> 
     <script src="library.js"></script> 
-    
+    <title>Demo-5</title> 
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
