--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
     <title>Demo - home page</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,10 +13,8 @@
 
 
     <header>
-        <p id="p-l">amadeus josip</p> 
-        <p></p>
-        <p id="p-c">demo - main page</p>
-        <p></p> 
+        <p id="p-l">amadeus josip</p>  
+        <p id="p-c"><span id="p-c-header">demo - main page</span></p> 
         <p id="p-r">2022</p>
     </header>
 
@@ -35,10 +34,8 @@
 
 
 <footer>
-    <p id="p-l">jceric@grf.hr</p> 
-    <p></p>
-    <p id="p-c"></p>
-    <p></p> 
+    <p id="p-l">jceric@grf.hr</p>  
+    <p id="p-c"></p> 
     <p id="p-r">099/5416-404</p>
 </footer>
 
