--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="format-detection" content="telephone=no">
 <title>HOME PAGE</title>  
 <link rel="shortcut icon" type="image/png" href="assets/ikona/favicon.png"> 
 <link rel="stylesheet" type="text/css" href="style.css"> 
@@ -21,7 +22,7 @@
 			<br>
 			<a href="./blender" class="l2">§Blender's renders</a>
 			<br>
-			<a href="https://amadeusjosip.github.io/grafike" class="l3">§Motion</a>
+			<a href="https://amadeusjosip.github.io/demo" class="l3">§Demo</a>
 		</div>     
 
 
@@ -37,10 +38,7 @@
 			<h3 class="midl">099/5416-404</h3>
 		</div>
 	</section>
-
-		<section class="sekcija">
-			<h2 class="ha">works only on desktop</h2>
-		</section>
+ 
 	
 </body>
 </html>
