--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no">
 <title>HOME PAGE</title>  
 <link rel="shortcut icon" type="image/png" href="assets/ikona/favicon.png"> 
