--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no">
-<title>HOME PAGE</title>  
-<link rel="shortcut icon" type="image/png" href="assets/ikona/favicon.png"> 
-<link rel="stylesheet" type="text/css" href="style.css"> 
-    
-     
+<title>PORTFOLIO</title>  
+<link rel="shortcut icon" type="image/png" href="assets/ikona/favicon.png">
+<link rel="stylesheet" type="text/css" href="style.css">  
+
 </head>
-<body>  
-	 <section class="oky">
-	<main></main>
-	  
-		<p class="ime1">Amadeus Josip</p><p class="ime2">•Čerić•</p>  
-
-		
-		<p class="links">[Links]</p>   
-		<div class="linkovi">
-			<a href="./grafike" class="l1">§Grafike</a>
-			<br>
-			<a href="./blender" class="l2">§Blender's renders</a>
-			<br>
-			<a href="https://amadeusjosip.github.io/demo" class="l3">§Demo</a>
-		</div>     
-
-
-		<div class="trakaG">
-			<h3 class="midl">HOME PAGE</h3>
-			<h3 class="midl">GRAPHIC DESIGNER</h3>
-			<h3 class="midl">PORTFOLIO</h3>
-		</div>
-
-		
-		<div class="trakaD">
-			<h3 class="midl">JCERIC@GRF.HR</h3> 
-			<h3 class="midl">099/5416-404</h3>
-		</div>
-	</section>
- 
+<body>   
 	
+	<header>
+		<div id="hdr-tekst-mali-1"><a target="_blank" href="https://www.linkedin.com/in/josip-amadeus-ceric" class="tekst-mali poravnanje-left mali-hover">linkedin</a></div>
+		<div id="hdr-tekst-mali-2"><p class="tekst-mali poravnanje-center">graphic designer</p></div>
+		<div id="hdr-tekst-mali-3"><a target="_blank" href="https://www.instagram.com/amadeusjosip" class="tekst-mali poravnanje-right mali-hover">instagram</a></div>  
+	</header>
+	 
+	<main>
+		<div class="main-gornji">
+			<h1 class="tekst-main" id="anim-1">AMADEUS JOSIP</h1>
+			<h1 class="tekst-main" id="anim-2">•ČERIĆ•</h1>
+		</div>
+
+		<div class="main-sredina">
+			<h1 class="tekst-main" id="anim-3">[LINKS]</h1>
+		</div>
+
+		<div class="main-donji">
+			<a href="#" target="_blank" class="link-main" id="anim-4">§GRAFIKE</a>
+			<a href="#" target="_blank" class="link-main" id="anim-5">§BLENDER'S RENDERS</a>
+			<a href="#" target="_blank" class="link-main" id="anim-6">§DEMO</a>
+		</div>
+ 
+	</main>
+
+	<div id="prazan-prostor"></div>
+
+	<footer>
+		<div id="ftr-tekst-mali-1"><p class="tekst-mali poravnanje-left">jceric@grf.hr</p></div>
+		<div id="ftr-tekst-mali-2"><p class="tekst-mali poravnanje-center"></p></div>
+		<div id="ftr-tekst-mali-3"><p class="tekst-mali poravnanje-right">099/5416-404</p></div>  
+	</footer>
+ 
 </body>
 </html>
