--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="format-detection" content="telephone=no">
 <title>PORTFOLIO</title>  
 <link rel="shortcut icon" type="image/png" href="assets/ikona/favicon.png">
-<link rel="stylesheet" type="text/css" href="style.css">  
+<link rel="stylesheet" type="text/css" href="assets/style.css">  
 
 </head>
 <body>   
