--- a/demo/index.html
+++ b/demo/index.html
@@ -21,12 +21,12 @@
     
 
 <div class="polje">
-        <h1>Linkovi na kratke demo stranice</h1>
+        <h1 id="h1-polje">Linkovi na kratke demo stranice</h1>
     <div class="linkovi"> 
-        <a href="../demo-mis/" target="_blank">interaktivnost sa mišem</a>    
-        <a href="../demo-scroll/" target="_blank">blender animacija sa scroll efektom</a>  
-        <a href="../demo-gumbi/" target="_blank">interaktivna animacija sa gumbima</a>   
-        <a href="../demo-gumbiNoise/" target="_blank">interaktivna animacija sa gumbima vol.2</a>  
+        <a href="../demo-mis/" target="_blank" class="linkovi-clr" id="linkovi-link-1">interaktivnost sa mišem</a>    
+        <a href="../demo-scroll/" target="_blank" class="linkovi-clr" id="linkovi-link-2">blender animacija sa scroll efektom</a>  
+        <a href="../demo-gumbi/" target="_blank" class="linkovi-clr" id="linkovi-link-3">interaktivna animacija sa gumbima</a>   
+        <a href="../demo-gumbiNoise/" target="_blank" class="linkovi-clr" id="linkovi-link-4">interaktivna animacija sa gumbima vol.2</a>  
     </div>
 </div>
 
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
