--- a/grafike/index.html
+++ b/grafike/index.html
@@ -15,14 +15,13 @@
 
         <div class="navbar"><h1 class="ime" id="ime1">JOSIP AMADEUS</h1><h1 class="ime" id="ime2">ČERIĆ</h1></div>
 
-        <div class="crveno"><div class="omotac"><a href=".." class="naslov">HOME PAGE</a></div></div>
+        <div class="crveno"><div class="omotac"><a href=".." class="naslov">[ GO BACK ]</a></div></div>
            
       
-<div class="gif1"><a href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ" target="_blank"><img src="gifovi/pozdrav.gif"></a></div>   
- 
-<div class="gif2"><a href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg" target="_blank"><img src="gifovi/taunt.gif"></a></div>   
-<div class="gif3 transY"><a href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa" target="_blank"><img src="gifovi/escher.gif"></a></div>   
-<div class="gif4 transY"><a href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p" target="_blank"><img src="gifovi/likovi.gif"></a></div>   
+<div class="gif1"><a href="../grafike"><img src="gifovi/pozdrav.gif"></a></div>   
+<div class="gif2"><a href="../grafike"><img src="gifovi/taunt.gif"></a></div>   
+<div class="gif3 transY"><a href="../grafike"><img src="gifovi/escher.gif"></a></div>   
+<div class="gif4 transY"><a href="../grafike"><img src="gifovi/likovi.gif"></a></div>   
  
 
 <div class="opis1">
@@ -57,9 +56,7 @@
     <p class="otpis"><span>PHONE</span> 099/5416-404</p>
 </div>  
 
-
-<div class="maska1"></div>
-<div class="maska2"></div>
+ 
 
     </main>
 
