--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <title>Demo - home page</title>
+    <link rel="shortcut icon" type="image/png" href="ikona/favicon.png"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
