--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		</div>
 
 		<div class="main-donji">
-			<a href="/grafike" target="_blank" class="link-main" id="anim-4">§GRAFIKE</a>
-			<a href="/blender" target="_blank" class="link-main" id="anim-5">§BLENDER'S RENDERS</a>
-			<a href="/demo" target="_blank" class="link-main" id="anim-6">§DEMO</a>
+			<a href="/grafike" class="link-main" id="anim-4">§GRAFIKE</a>
+			<a href="/blender" class="link-main" id="anim-5">§BLENDER'S RENDERS</a>
+			<a href="/demo" class="link-main" id="anim-6">§DEMO</a>
 		</div>
  
 	</main>
