--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <title>Demo - home page</title>
-    <link rel="shortcut icon" type="image/png" href="ikona/favicon.png"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +14,7 @@
 
     <header>
         <p id="p-l">amadeus josip</p>  
-        <p id="p-c"><span id="p-c-header">demo - main page</span></p> 
+        <p id="p-c" class="header-a"><span id="p-c-header">demo page</span></p> 
         <p id="p-r">2022</p>
     </header>
 
@@ -28,6 +27,7 @@
         <a href="../demo-scroll/" target="_blank" class="linkovi-clr" id="linkovi-link-2">blender animacija sa scroll efektom</a>  
         <a href="../demo-gumbi/" target="_blank" class="linkovi-clr" id="linkovi-link-3">interaktivna animacija sa gumbima</a>   
         <a href="../demo-gumbiNoise/" target="_blank" class="linkovi-clr" id="linkovi-link-4">interaktivna animacija sa gumbima vol.2</a>  
+        <a href="../demo-gumbiNoiseMali/" target="_blank" class="linkovi-clr" id="linkovi-link-5">interaktivna animacija sa gumbima vol.3</a>  
     </div>
 </div>
 
@@ -42,4 +42,3 @@
 
 </body>
 </html>
-
