--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <link rel="shortcut icon" type="image/png" href="ikona/favicon.png"> 
     <title>Demo - home page</title>
     <link rel="stylesheet" href="style.css">
 </head>
