--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
         <span>
           <div class="work-item item-1 item-1x" id="elemA">
             <a target="_blank" href="https://jodeus.tumblr.com/post/131437406357" class="h1-a font-B fw-N">KL</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/131437406357"><img src="/gifovi/002.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/131437406357"><img src="gifovi/002.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/131437406357" class="h1-a font-B fw-N">AUN</a>
             <p>2015</p>
           </div>
@@ -57,7 +57,7 @@
         <span>
           <div class="work-item item-2 item-2x" id="elemB">
             <a target="_blank" href="https://jodeus.tumblr.com/post/157633649177" class="h1-a font-H fw-N">SQ</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/157633649177"><img src="/gifovi/001.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/157633649177"><img src="gifovi/001.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/157633649177" class="h1-a font-H fw-N">UARES</a>
             <p>2017</p>
           </div>
@@ -68,7 +68,7 @@
         <span>
           <div class="work-item item-3 item-3x" id="elemC">
             <a target="_blank" href="https://jodeus.tumblr.com/post/133999898712" class="h1-a font-F fw-B">SUR</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/133999898712o"><img src="/gifovi/003.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/133999898712o"><img src="gifovi/003.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/133999898712" class="h1-a font-F fw-B">F</a>
             <p>2015</p>
           </div>
@@ -79,11 +79,11 @@
 		 <span>
       <div class="work-item item-4 item-4x" id="elemD">
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa" class="h1-a font-G fw-N">GEO</a>  
-        <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa"><img src="/slike/G1.gif" alt="" /></a></span> 
+        <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa"><img src="slike/G1.gif" alt="" /></a></span> 
       <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa" class="h1-a font-G fw-N">ME</a>
-      <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa"><img src="/slike/G2.gif" alt="" /></a></span> 
+      <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa"><img src="slike/G2.gif" alt="" /></a></span> 
     <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa" class="h1-a font-G fw-N">TRY X ESCH</a>
-      <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa"><img src="/slike/G3.gif" alt="" /></a></span> 
+      <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa"><img src="slike/G3.gif" alt="" /></a></span> 
     <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/BlgLomxBa" class="h1-a font-G fw-N">ER</a>
         <p>2022</p>
       </div>
@@ -92,7 +92,7 @@
         <span>
           <div class="work-item item-5" id="elemE">
             <a target="_blank" href="https://jodeus.tumblr.com/post/116230821002" class="h1-a font-A fw-B">ELLI</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/116230821002"><img src="/gifovi/004.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/116230821002"><img src="gifovi/004.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/116230821002" class="h1-a font-A fw-B">PSES</a>
             <p>2015</p>
           </div>
@@ -101,11 +101,11 @@
 		<span>
           <div class="work-item item-6" id="elemF">
             <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg" class="h1-a font-C fw-N">WO</a>  
-            <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg"><img src="/slike/T1.gif" alt="" /></a></span> 
+            <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg"><img src="slike/T1.gif" alt="" /></a></span> 
           <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg" class="h1-a font-C fw-N">RD T</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg"><img src="/slike/T2.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg"><img src="slike/T2.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg" class="h1-a font-C fw-N">A</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg"><img src="/slike/T3.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg"><img src="slike/T3.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/9YKEcIYEg" class="h1-a font-C fw-N">UNT</a>
             <p>2022</p>
           </div>
@@ -114,7 +114,7 @@
         <span>
           <div class="work-item item-7" id="elemG">
             <a target="_blank" href="https://jodeus.tumblr.com/post/90582061252" class="h1-a font-D fw-H">TRI</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/90582061252"><img src="/gifovi/005.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/90582061252"><img src="gifovi/005.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/90582061252" class="h1-a font-D fw-H">ANGLES</a>
             <p>2014</p>
           </div>
@@ -123,11 +123,11 @@
 		<span>
           <div class="work-item item-8" id="elemH">
             <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ" class="h1-a font-A fw-B">BO</a>  
-            <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ"><img src="/slike/P1.gif" alt="" /></a></span> 
+            <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ"><img src="slike/P1.gif" alt="" /></a></span> 
           <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ" class="h1-a font-A fw-B">NJO</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ"><img src="/slike/P2.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ"><img src="slike/P2.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ" class="h1-a font-A fw-B">U</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ"><img src="/slike/P3.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ"><img src="slike/P3.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/syxAP7QCZ" class="h1-a font-A fw-B">R</a>
             <p>2022</p>
           </div>
@@ -136,7 +136,7 @@
         <span>
           <div class="work-item item-9" id="elemI">
             <a target="_blank" href="https://jodeus.tumblr.com/post/88513291982" class="h1-a font-C fw-N">DAR</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/88513291982"><img src="/gifovi/006.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/88513291982"><img src="gifovi/006.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/88513291982" class="h1-a font-C fw-N">WIN</a>
             <p>2014</p>
           </div>
@@ -145,7 +145,7 @@
         <span>
           <div class="work-item item-10" id="elemJ">
             <a target="_blank" href="https://jodeus.tumblr.com/post/60380809486" class="h1-a font-F fw-N">DEPTH X MO</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/60380809486"><img src="/gifovi/008.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/60380809486"><img src="gifovi/008.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/60380809486" class="h1-a font-F fw-N">NKEY</a>
             <p>2013</p>
           </div>
@@ -154,9 +154,9 @@
         <span>
           <div class="work-item item-11" id="elemK">
             <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i" class="h1-a font-E fw-N">BA</a>  
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i"><img src="/slike/B1.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i"><img src="slike/B1.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i" class="h1-a font-E fw-N">U</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i"><img src="/slike/B2.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i"><img src="slike/B2.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/qsu1yEl_i" class="h1-a font-E fw-N">HAUS</a>
             <p>2022</p>
           </div>
@@ -166,11 +166,11 @@
         <span>
           <div class="work-item item-12" id="elemL">
             <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p" class="h1-a font-A fw-B">DR</a>  
-            <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p"><img src="/slike/F1.gif" alt="" /></a></span> 
+            <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p"><img src="slike/F1.gif" alt="" /></a></span> 
           <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p" class="h1-a font-A fw-B">AWING X F</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p"><img src="/slike/F2.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p"><img src="slike/F2.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p" class="h1-a font-A fw-B">AC</a>
-          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p"><img src="/slike/F3.gif" alt="" /></a></span> 
+          <span><a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p"><img src="slike/F3.gif" alt="" /></a></span> 
         <a target="_blank" href="https://editor.p5js.org/19amadeus96/sketches/7e4Ihf80p" class="h1-a font-A fw-B">ES</a>
             <p>2022</p>
           </div>
@@ -179,7 +179,7 @@
         <span>
           <div class="work-item item-13" id="elemM">
             <a target="_blank" href="https://jodeus.tumblr.com/post/84657577262" class="h1-a font-F fw-N">PARTICL</a>  
-              <span><a target="_blank" href="https://jodeus.tumblr.com/post/84657577262"><img src="/gifovi/007.gif" alt="" /></a></span> 
+              <span><a target="_blank" href="https://jodeus.tumblr.com/post/84657577262"><img src="gifovi/007.gif" alt="" /></a></span> 
             <a target="_blank" href="https://jodeus.tumblr.com/post/84657577262" class="h1-a font-F fw-N">ES</a>
             <p>2014</p>
           </div>
