--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>...</title>
+    <title>not done</title>
     <script defer src="scroll.js"></script>
     <!-- stylesheet  -->
     <link rel="stylesheet" href="style.css" />
@@ -19,7 +19,7 @@
       <div class="sub-header sub-header-1">
         <div>AMADEUS JOSIP</div>
         <div>
-          <a target="_blank" href="https://amadeusjosip.github.io" class="sub-header-link font-A boja">TWITTER</a> / <a target="_blank" href="https://amadeusjosip.github.io" class="sub-header-link font-A boja">INSTAGRAM</a> / <a target="_blank" href="https://amadeusjosip.github.io" class="sub-header-link font-A boja">FACEBOOK</a>
+          <a target="_blank" href="https://mobile.twitter.com/amadeusjosip" class="sub-header-link font-A boja">TWITTER</a> / <a target="_blank" href="https://www.instagram.com/amadeusjosip/" class="sub-header-link font-A boja">INSTAGRAM</a> / <a target="_blank" href="https://www.facebook.com/amadeusjosip" class="sub-header-link font-A boja">FACEBOOK</a>
         </div>
       </div>
       <div class="sub-header sub-header-2">
