--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -189,7 +189,7 @@
     </div> 
   </section>
   
-
+<!-- ovo je za sakrit footer koji mi se ipak ne uklapa
   <footer>
     <div class="naslov-ftr">
       <h1 class="moje-ime">AMADEUSJOSIP</h1>
@@ -202,7 +202,7 @@
       <p class="p-opis2">U POČETKU SAM UGLAVNOM PROGRAMIRAO U PYTHONU I PROCESSINGU, A ZADNJIH GODINU DANA I U P5JS PROGRAMSKOM JEZIKU TE HTML-U, CSS-U I JAVASCRIPTU POMOĆU KOJIH SAM I NAPRAVIO OVU OVDJE WEB STRANICU. I DALJE SE BAVIM PROGRAMIRANJEM GRAFIKA, IAKO MI JE TRENUTNI FOKUS IPAK WEB PROGRAMIRANJE. OSIM TOGA BAVIM SE I BLENDEROM, A NAJVIŠE VOLIM FOTOREALISTIČNE RENDERE.</p>
     </div>
   </footer>
- 
+  -->
 
   <script>
     const tekst = document.getElementsByClassName("p-opis")[0];
