--- a/half-scroll/index.html
+++ b/half-scroll/index.html
@@ -8,8 +8,7 @@
     <title>half scroll</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> 
-    
+<body>  
     <!--sticky part of the page-->
     <header>
         <div class="linkovi">
@@ -30,7 +29,7 @@
     <!--contact/section 222222222222-->
     <section id="s2">
     <section id="s2-demo">
-        <h3>DEMO PAGES</h3>
+        <h3 class="boldani-tekst-bijeli">INTERAKTIV</h3>
         <div class="linkovi">
             <a href="../demo-gumbiNoiseMali" target="_blank">BUTTONS</a>
             <a href="../demo-scroll" target="_blank">ON-SCROLL</a>
@@ -39,7 +38,7 @@
     </section>
      <!--about/section 333333333333-->
     <section id="s2-socials">
-        <h3>SOCIALS</h3>
+        <h3 class="boldani-tekst-bijeli">SOCIALS</h3>
         <div class="linkovi">
             <a href="https://www.instagram.com/amadeusjosip/" target="_blank">INSTAGRAM</a>
             <a href="https://www.linkedin.com/in/josip-amadeus-ceric" target="_blank">LINKEDIN</a>
@@ -50,10 +49,8 @@
  
     <!--contact/section 44444444444-->
     <section id="s4">
-        <h3>E-MAIL</h3>
-        <p style="font-size: 20px;">josip.amadeus@gmail.com</p>
-    </section>
- 
-    
+        <h3 class="boldani-tekst-crni">E-MAIL</h3>
+        <p id="s4-p">josip.amadeus@gmail.com</p>
+    </section> 
 </body>
 </html>
