--- a/not-done/903-blok/index.html
+++ b/not-done/903-blok/index.html
@@ -56,7 +56,7 @@
                         <a href="" class="link link-1">NASLOVNA</a> 
                         <a href="/about" class="link link-2">O NAMA</a> 
                         <a href="/fotke" class="link link-3">TETOVAŽE</a> 
-                        <a href="/contact" class="link link-4">KONTAKT</a> 
+                        <a href="../903-blok/contact" class="link link-4">KONTAKT</a> 
                     </div>
                 </div>
             </div>
