--- a/not-done/903-blok/index.html
+++ b/not-done/903-blok/index.html
@@ -32,7 +32,7 @@
         </div>
 
 
-
+<div class="div">
          <div class="skup item-x"> 
             <div class="tekst-gore item-2">
                 <h1 id="gore">Tattoo Studio</h1>
@@ -68,6 +68,7 @@
 
 
         </div>
+    </div>
 
  
  
