--- a/903/index.html
+++ b/903/index.html
@@ -41,6 +41,11 @@
         </section>
 
 
+        <section id="osma">
+            <img src="slide-8.jpg" class="slide-8 item-x8">
+        </section>
+
+
         <section id="cetvrta">
             <img src="slide-4.jpg" class="slide-4 item-x4">
         </section>
