--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -44,7 +44,7 @@
             </section>
             <div class="m-para-okolo">
                 <section class="m-para">
-                    <h3>Hello, I'm Josip Amadeus - a 26 year-old graphic designer who besides Photoshop, Illustrator and After Effects also loves to code - mostly HTML, CSS, Javascript and Processing. Also, Blender.</h3>
+                    <h3>Hello, I'm Josip Amadeus - a 26 year-old graphic designer who besides Photoshop, Illustrator and After Effects also loves to code - mostly HTML, CSS, Javascript and Processing. And Blender as well.</h3>
                             <br>
                     <div id="m-email"><a href="mailto:josip.amadeus@gmail.com" class="arrows">Email ↗</a></div> 
                     <div id="m-insta"><a href="https://www.instagram.com/amadeusjosip/" target="_blank" class="arrows">Instagram ↗</a></div> 
