--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -37,7 +37,7 @@
 <section id="ver-mobile">
     
     
-    <div class="m-all">
+    <div class="m-all" id="visina">
         <main class="m-main">
             <section class="m-tab-G">
                 <div id="t0"><a href="../landing-page" class="linkovi" id="t0-L">About</a><a href="mailto:josip.amadeus@gmail.com" target="_blank" class="linkovi" id="t0-C">Contact</a><a href="https://www.linkedin.com/in/josip-amadeus-ceric" id="t0-R" class="linkovi">Linkedin</a></div>
@@ -68,5 +68,6 @@
     <script src="js-files/script-1.js"></script>
     <script src="js-files/script-2.js"></script>
     <script src="js-files/script-3.js"></script>
+    <script src="js-files/visina.js"></script>
 </body>
 </html>
