--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -40,7 +40,11 @@
     <div class="m-all" id="visina">
         <main class="m-main">
             <section class="m-tab-G">
-                <div id="t0"><a href="../landing-page" class="linkovi" id="t0-L">About</a><a href="mailto:josip.amadeus@gmail.com" target="_blank" class="linkovi" id="t0-C">Contact</a><a href="https://www.linkedin.com/in/josip-amadeus-ceric" id="t0-R" class="linkovi">Linkedin</a></div>
+                <div id="t0">
+                    <div><a href="../landing-page" class="linkovi" id="t0-L">About</a></div>
+                    <div><a href="mailto:josip.amadeus@gmail.com" target="_blank" class="linkovi" id="t0-C">Contact</a></div>
+                    <div><a href="https://www.linkedin.com/in/josip-amadeus-ceric" id="t0-R" class="linkovi">Linkedin</a></div>
+                </div>
             </section>
             <div class="m-para-okolo">
                 <section class="m-para">
