--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -48,7 +48,7 @@
 
         <!--SLOVA C_M_S -->
         <header>
-            <div id="headerC"><a id="aa1" href="/interactive" target="_blank">IA</a></div>
+            <div id="headerC"><a id="aa1" href="https://amadeusjosip.github.io/demo-gumbi/" target="_blank">IA</a></div>
             <div id="headerX">
                 <img id="skrivenaA" src="img/IA.gif" style="display: none;">
                 <img id="skrivenaB" src="img/B-posteri.gif" style="display: none;">
@@ -61,9 +61,9 @@
 
 
 
-<!---------------------------------- mobile VERSION 1.0 --------------------------->
+<!---------------------------------- mobile VERSION 2.0 --------------------------->
 <section id="version-mobile">
-    mobile version, not done yet
+    mobile version currently not working
 </section>
 
 
