--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="ikona/favicon.png">
-    <title>vHOMEPAGE</title>
+    <title>HOMEPAGE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="bodij"> 
@@ -48,7 +48,7 @@
 
 
 
-        <!--SLOVA C_M_S -->
+        <!--SLOVA IN-R'-Js -->
         <header>
             <div id="headerC"><a id="aa1" href="https://amadeusjosip.github.io/demo-gumbi/" target="_blank">IN</a></div>
             <div id="headerX">
@@ -69,9 +69,9 @@
 </section>
 
 
-<!---------------------------------- ANIMATION LOAD --------------------------->
+<!---------------------------------- ANIMATION LOAD ON REFRESH --------------------------->
 <section id="loading">  
-    <h5>WELCOME</h5>
+    <h5>JOSIP AMADEUS</h5>
 </section>
 
  
