--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -71,7 +71,7 @@
 
 <!---------------------------------- ANIMATION LOAD ON REFRESH --------------------------->
 <section id="loading">  
-    <h5>JOSIP AMADEUS</h5>
+    <h5>WELCOME</h5>
 </section>
 
  
