--- a/myportafolio/index.html
+++ b/myportafolio/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -107,10 +106,10 @@
         <section>
             <div><h3 style="font-weight: normal;">CONTACT LINKS</h3></div>
             <div>
-                <a target="_blank" href="https://www.instagram.com/amadeusjosip/" style="font-weight: bold;">IG</a>
-                <a target="_blank" href="https://www.linkedin.com/in/josip-amadeus-ceric/"  style="font-weight: bold;">IN</a>
-                <a target="_blank" href="mailto:josip.amadeus@gmail.com"  style="font-weight: bold;">EM</a>
-                <a target="_blank" href="https://www.fxhash.xyz/u/amadeusjosip"  style="font-weight: bold;">FX</a>
+                <a target="_blank" href="https://www.instagram.com/amadeusjosip/" style="font-weight: normal;">IG</a>
+                <a target="_blank" href="https://www.linkedin.com/in/josip-amadeus-ceric/"  style="font-weight: normal;">IN</a>
+                <a target="_blank" href="mailto:josip.amadeus@gmail.com"  style="font-weight: normal;">EM</a>
+                <a target="_blank" href="https://www.fxhash.xyz/u/amadeusjosip"  style="font-weight: normal;">FX</a>
             </div>  
         </section>
     </div>
@@ -118,11 +117,10 @@
 </section>
 
 
-<!---------------------------------- ANIMATION LOAD ON REFRESH --------------------------->
+<!---------------------------------- ANIMATION LOAD ON REFRESH ------------------------>
 <section id="loading">  
     <h5>WELCOME</h5>
-</section>
-
+</section> 
  
 <script src="script.js"></script>
 </body>
